Fixes image stretching.
[ Delivers #90661108 ]

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -251,7 +251,7 @@ footer { bottom: 0; position: absolute; }
 	.reader-container { margin-top: 15px; }
 	#item-options { margin: 10px 0; padding: 0; }
 	p { font-size: 16px; margin: 17px 0; }
-	img { clear: both; max-width: 100%; margin: 0 auto; display: block; }
+	img { clear: both; max-width: 100%; height: auto; margin: 0 auto; display: block; }
 	.modal-content { height: 90%; overflow: scroll; border: 0; box-shadow: 0px 0px 20px 20px white; }
 	.share-links { position: fixed; top: 0; right: -150px; z-index: 100; }
 }
